--- a/app/package.json
+++ b/app/package.json
@@ -1,11 +1,17 @@
 {
   "name": "blog-api",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.36.0",
+    "eslint-formatter-unix": "^1.0.0",
+    "eslint-plugin-security": "^3.0.1"
   }
 }
